--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <p>A new line in our file!</p>
 <div><img src="duck.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <p>This line is here to show how merging works.</p>
+<p>This line is here to show how merging works.</p>
 
 </body>
 </html>
